--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+HomomorphicEncryption 0.3.1
+===========================
+  
+  * Allow t parameter in FandV scheme to be a bigz.
+
 HomomorphicEncryption 0.3.0
 ===========================
   
