--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+HomomorphicEncryption 0.3.3
+===========================
+  
+  * Fix decryption error when large accumulation on coefficients.
+
 HomomorphicEncryption 0.3.2
 ===========================
   
