Tweaks after move.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+HomomorphicEncryption 0.3.4
+===========================
+  
+  * Update for latest R release.
+  * Amend contact details after moving from Oxford to Durham.
+
 HomomorphicEncryption 0.3.3
 ===========================
   
