--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+HomomorphicEncryption 0.3.5
+===========================
+  
+  * Fix for latest R versions.
+
 HomomorphicEncryption 0.3.4
 ===========================
   
