--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+fhe 0.6.0
+=========
+  
+  * Rename package {HomomorphicEncryption} -> {fhe}
+  * Although this package has been available for source installation under the original name since 2014, and was documented in Aslett et al. (2015) <arXiv:1508.06574>, unfortunately another package was submitted to CRAN in 2022 which created a name collision and causes incorrect installation using the R-universe installation method.
+
+HomomorphicEncryption 0.5.0 - 0.5.3
+===================================
+  
+  * Updates to bring back into working order after a period of neglect!
+  * Additionally, added the R-universe.
+  * Major overhaul of configure script and Makevars.win to allow binary installation on Mac and Windows.
+
 HomomorphicEncryption 0.3.5
 ===========================
   
